# llm_benchmark

./: .gitignore  .pdm-python  pyproject.toml
api/: avg_token.py  bench.py  fixed_words.py
api/chart/: avg_time.py
api/ref/: ref1_input.py  ref1_output.py  ref2.py
