[project]
name = "llm-benchmark"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = ["requests>=2.32.3", "tabulate>=0.9.0", "pandas>=2.2.3", "matplotlib>=3.10.0", "aiohttp>=3.11.12", "tqdm>=4.67.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
